@@ -24,6 +24,7 @@ var localized_strings,
             options_guest: "Items You Have A Guest Pass For",
             options_friends_wishlist: "Items Your Friends Have Wishlisted",
             options_hide_install: "Hide \"Install Steam\" button",
+			options_send_age_info: "Automatically send age verification when requested",
             options_drm: "Show 3rd Party DRM Warnings",
             options_lowestprice: "Show Price History Information",
             options_metacritic: "Show Metacritic User Scores",
