@@ -468,6 +468,17 @@
 			
 			<tr>
 				<td>
+					<input type="checkbox" id="send_age_info">
+				</td>
+				<td height=30>
+					<div id="send_age_info_text" class="text">Automatically send age verification when requested</div>
+				</td>								
+			</tr>
+			
+			<tr><td>&nbsp;</td></tr>
+			
+			<tr>
+				<td>
 					<input type="checkbox" id="showdrm">
 				</td>
 				<td height=30>
